# ST_QMSS_Projects

./: README.md
wgertrainer/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
wgertrainer/docs/: Makefile  conf.py  example.ipynb  make.bat
wgertrainer/docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
wgertrainer/docs/_build/doctrees/autoapi/: index.doctree
wgertrainer/docs/_build/doctrees/autoapi/wgertrainer/: index.doctree
wgertrainer/docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
wgertrainer/docs/_build/html/_modules/: index.html
wgertrainer/docs/_build/html/_modules/wgertrainer/: display_equipment_table.html  display_muscle_table.html  exercise_pick_revised.html  fetch_exercise.html  websearch.html
wgertrainer/docs/_build/html/_sources/autoapi/: index.rst.txt
wgertrainer/docs/_build/html/autoapi/: index.html
wgertrainer/docs/_build/html/autoapi/wgertrainer/: index.html
wgertrainer/docs/_build/jupyter_execute/: example.ipynb
wgertrainer/src/wgertrainer/: __init__.py  display_equipment_table.py  fetch_exercise.py  result_check.ipynb
wgertrainer/src/wgertrainer/.ipynb_checkpoints/: websearch-checkpoint.py
wgertrainer/tests/: test_display_equipment_table.py  test_display_muscle_table.py  test_exercise_pick_revised.py  test_websearch_revised.py  test_wgertrainer.py
(+25 files in other folders)
