[tool.poetry]
name = "wgertrainer"
version = "0.1.0"
description = "Using Wger API to access various workouts,this is a package build to help you find the best exercise based on your input of muscle group and available equipment"
authors = ["Shuaitao Tan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pandas = "^2.1.4"
sphinx = "^7.2.6"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


